[gd_scene load_steps=4 format=3 uid="uid://bmug8qi3qyxox"]

[ext_resource type="Texture2D" uid="uid://b3h6ax4qyh4ee" path="res://Assets/2D/fondnoir.jpg" id="1_6yk7w"]
[ext_resource type="Script" path="res://ScriptsEtScenes/UI/options.gd" id="1_8eq7t"]
[ext_resource type="Theme" uid="uid://dyv0gggkiltum" path="res://Assets/FontTheme/OD_24px.tres" id="2_6yoqx"]

[node name="Options" type="CanvasLayer"]
layer = 2
script = ExtResource("1_8eq7t")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.313726)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6yk7w")

[node name="VBoxOptions" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxWindow" type="VBoxContainer" parent="VBoxOptions"]
layout_mode = 2
theme = ExtResource("2_6yoqx")
alignment = 1

[node name="LabelScreenMode" type="Label" parent="VBoxOptions/VBoxWindow"]
layout_mode = 2
text = "Screen mode :"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxOptions/VBoxWindow"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ButtonFullscreen" type="Button" parent="VBoxOptions/VBoxWindow/HBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="ButtonWindowed" type="Button" parent="VBoxOptions/VBoxWindow/HBoxContainer"]
layout_mode = 2
text = "Windowed"

[node name="VBoxButton" type="VBoxContainer" parent="VBoxOptions"]
layout_mode = 2
theme = ExtResource("2_6yoqx")
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonBack" type="Button" parent="VBoxOptions/VBoxButton"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="ButtonQuit" type="Button" parent="VBoxOptions/VBoxButton"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="VBoxOptions/VBoxWindow/HBoxContainer/ButtonFullscreen" to="." method="_on_button_fullscreen_pressed"]
[connection signal="pressed" from="VBoxOptions/VBoxWindow/HBoxContainer/ButtonWindowed" to="." method="_on_button_windowed_pressed"]
[connection signal="pressed" from="VBoxOptions/VBoxButton/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="VBoxOptions/VBoxButton/ButtonQuit" to="." method="_on_button_quit_pressed"]
